--- a/main.ipynb
+++ b/main.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some explanation here"
+    "The next step of our study is the preprocessing of data so we can easily study and exploit it for our further research. We need to take the textual data from the keylogger and transform it into data structures that are more efficient and usefult for the analysis that we plan to do."
    ]
   },
   {
@@ -212,6 +212,21 @@
     "import math\n",
     "\n",
     "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Firtly, for each file in the key pressed and key released directories, we need to convert simple textual data into a useful data structure that is easy to manipulate. For our purposes, the ideal data structure is a DataFrame from Pandas.\n",
+    "A DataFrame is two-dimensional, size-mutable, potentially heterogeneous tabular data. This data structure also contains labeled axes (rows and columns). Arithmetic operations align on both row and column labels. It represents the primary pandas data structure.\n",
+    "\n",
+    "Once out pressed and released data is properly formatted, we can merge them into a single file, detailing for each key when it was pressed and released in a single dataset. In order to do that firstly we remove any duplicated that might have occured when saving the separate text files. Then, for each timestamp of a released key, we search for the nearest timestamp for which the same key was pressed. We can then take that data and save it in a single dataset. We also identify in this dataset the name of the user who created this data, in order to properly differentiate between user datasets in our analysis.\n",
+    "\n",
+    "Finally we measure a few key metrics and add them to our final dataset:\n",
+    "- press_press_time: a list of time intervals between different subsequent key presses\n",
+    "- release_release_time: a list of time intervals between subsequent key releases\n",
+    "- press_release_time: a list of time intervals that represent the time interval for which a key is pressed and then released."
    ]
   },
   {
