Guess what? More COMMENTS

--- a/main.ipynb
+++ b/main.ipynb
@@ -649,6 +649,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Heatmap showing the correlation between different metrics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -672,6 +679,13 @@
     "fig = plt.figure()\n",
     "sns.heatmap(dataframe.corr(), annot=True, fmt=\".2f\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this graphic, for each metric and each user we calculate the value densities. This allows us to compare the typing styles between the different users efficiently, as we can see in the differences in densities for each user. This can allow us to study the possibility of identifying a user using keystroke dynamics."
    ]
   },
   {
