--- a/main.ipynb
+++ b/main.ipynb
@@ -813,6 +813,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The k-nearest neighbors algorithm (k-NN) is a non-parametric classification method. It is used for classification and regression. In our case, we use it for classification. The input consists of the k closest training examples in a data set, while the output is a class membership. An object is classified by a plurality vote of its neighbors, with the object being assigned to the class most common among its k nearest neighbors (k is a positive integer, typically small). If k = 1, then the object is simply assigned to the class of that single nearest neighbor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -836,6 +843,14 @@
     "X_test = scaler.transform(X_test)\n",
     "scalerPickle = open('models/scalerpickle_file', 'wb')\n",
     "pickle.dump(scaler, scalerPickle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do we determine K?\n",
+    "With a given K value, we determine the boundaries of each class. We determine the proper K to use by looking at the error rates produced by using different values of K. We then choose the value of K that producec the lowest error rate. In our case, that value is around the 7.5 mark."
    ]
   },
   {
@@ -876,6 +891,13 @@
     "    error_rates.append(np.mean(new_predictions != y_test))\n",
     "    \n",
     "plt.plot(error_rates)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The score output by the KNN algorithm represents the mean accuracy on a test dataset and given labels. We managed to achieve an accuracy rate of arount 66.8%"
    ]
   },
   {
