--- a/main.ipynb
+++ b/main.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,12 +331,12 @@
     "    dataset[\"press_release_time\"] = press_release_time\n",
     "    dataset[\"release_release_time\"] = release_release_time\n",
     "\n",
-    "    kb_dataset = dataset.copy().reset_index()\n",
+    "    kb_dataset = dataset.copy().reset_index().drop(columns=['index'])\n",
     "    kb_dataset.drop(columns = [\"pressed\", \"released\"], inplace=True)\n",
     "    kb_dataset.to_csv(f\"datasets/key_based/{user}_data.csv\", index=False)\n",
     "\n",
     "    # Word-based\n",
-    "    wb_dataset = dataset.copy().reset_index()\n",
+    "    wb_dataset = dataset.copy().reset_index().drop(columns=['index'])\n",
     "    wb_dataset[\"word_number\"] = 0\n",
     "    word_number = 0\n",
     "    for index, row in wb_dataset.iterrows():\n",
@@ -345,114 +345,77 @@
     "            word_number += 1\n",
     "\n",
     "    wb_dataset = wb_dataset.groupby(['word_number', 'user']).mean()\n",
-    "    print(wb_dataset)\n",
-    "    print(wb_dataset.columns)\n",
     "    \n",
     "    wb_dataset.to_csv(f\"datasets/word_based/{user}_data.csv\", index=False)\n",
-    "\n",
-    "    print(kb_dataset)    \n",
-    "    print(wb_dataset)\n",
     "\n",
     "    return kb_dataset, wb_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                       index     hold_time  press_press_time  \\\n",
-      "word_number user                                               \n",
-      "0           alex  114.200000  5.705608e+06     725089.200000   \n",
-      "1           alex   76.000000  1.137929e+05     234301.000000   \n",
-      "2           alex  108.666667  1.458383e+05     125014.666667   \n",
-      "3           alex  165.750000  1.165817e+05     249577.625000   \n",
-      "4           alex  193.625000  1.369389e+05     207248.000000   \n",
-      "...                      ...           ...               ...   \n",
-      "59          alex  199.600000  1.062554e+05     131222.400000   \n",
-      "60          alex  233.888889  1.268989e+05     166848.444444   \n",
-      "61          alex  158.750000  1.249925e+05     191358.250000   \n",
-      "62          alex  161.714286  1.383560e+05     122739.857143   \n",
-      "63          alex  263.600000  1.499736e+05     168697.200000   \n",
+      "             key  user   hold_time  press_press_time  press_release_time  \\\n",
+      "0    [backspace]  alex  10314910.0          703718.0          -9611192.0   \n",
+      "1              r  alex   7749994.0           89685.0          -7660309.0   \n",
+      "2              e  alex  11684820.0          256107.0         -11428713.0   \n",
+      "3              l  alex   8562304.0          211177.0          -8351127.0   \n",
+      "4              a  alex   5724507.0          129300.0          -5595207.0   \n",
+      "..           ...   ...         ...               ...                 ...   \n",
+      "384            o  alex    140600.0          171841.0             31241.0   \n",
+      "385            f  alex     93716.0          218674.0            124958.0   \n",
+      "386            f  alex    109367.0          328076.0            218709.0   \n",
+      "387            e  alex    265540.0          124895.0           -140645.0   \n",
+      "388            r  alex    140645.0               0.0                 0.0   \n",
       "\n",
-      "                  press_release_time  release_release_time  \n",
-      "word_number user                                            \n",
-      "0           alex       -4.980518e+06        -298591.600000  \n",
-      "1           alex        1.205081e+05         247710.142857  \n",
-      "2           alex       -2.082367e+04         110089.666667  \n",
-      "3           alex        1.329959e+05         247611.312500  \n",
-      "4           alex        7.030912e+04         212857.000000  \n",
-      "...                              ...                   ...  \n",
-      "59          alex        2.496700e+04         153088.800000  \n",
-      "60          alex        3.994956e+04         156436.555556  \n",
-      "61          alex        6.636575e+04         199164.500000  \n",
-      "62          alex       -1.561614e+04         122741.428571  \n",
-      "63          alex        4.685260e+04         168706.200000  \n",
+      "     release_release_time  \n",
+      "0              -1861198.0  \n",
+      "1               4024511.0  \n",
+      "2              -2866409.0  \n",
+      "3              -2626620.0  \n",
+      "4               6211471.0  \n",
+      "..                    ...  \n",
+      "384              124957.0  \n",
+      "385              234325.0  \n",
+      "386              484249.0  \n",
+      "387                   0.0  \n",
+      "388                   0.0  \n",
       "\n",
-      "[64 rows x 5 columns]\n",
-      "Index(['index', 'hold_time', 'press_press_time', 'press_release_time',\n",
-      "       'release_release_time'],\n",
-      "      dtype='object')\n",
-      "     index          key  user   hold_time  press_press_time  \\\n",
-      "0      208  [backspace]  alex  10314910.0          703718.0   \n",
-      "1      133            r  alex   7749994.0           89685.0   \n",
-      "2      232            e  alex  11684820.0          256107.0   \n",
-      "3      196            l  alex   8562304.0          211177.0   \n",
-      "4        8            a  alex   5724507.0          129300.0   \n",
-      "..     ...          ...   ...         ...               ...   \n",
-      "384    177            o  alex    140600.0          171841.0   \n",
-      "385    361            f  alex     93716.0          218674.0   \n",
-      "386    362            f  alex    109367.0          328076.0   \n",
-      "387    270            e  alex    265540.0          124895.0   \n",
-      "388    148            r  alex    140645.0               0.0   \n",
+      "[389 rows x 6 columns]\n",
+      "                     hold_time  press_press_time  press_release_time  \\\n",
+      "word_number user                                                       \n",
+      "0           alex  5.705608e+06     725089.200000       -4.980518e+06   \n",
+      "1           alex  1.137929e+05     234301.000000        1.205081e+05   \n",
+      "2           alex  1.458383e+05     125014.666667       -2.082367e+04   \n",
+      "3           alex  1.165817e+05     249577.625000        1.329959e+05   \n",
+      "4           alex  1.369389e+05     207248.000000        7.030912e+04   \n",
+      "...                        ...               ...                 ...   \n",
+      "59          alex  1.062554e+05     131222.400000        2.496700e+04   \n",
+      "60          alex  1.268989e+05     166848.444444        3.994956e+04   \n",
+      "61          alex  1.249925e+05     191358.250000        6.636575e+04   \n",
+      "62          alex  1.383560e+05     122739.857143       -1.561614e+04   \n",
+      "63          alex  1.499736e+05     168697.200000        4.685260e+04   \n",
       "\n",
-      "     press_release_time  release_release_time  \n",
-      "0            -9611192.0            -1861198.0  \n",
-      "1            -7660309.0             4024511.0  \n",
-      "2           -11428713.0            -2866409.0  \n",
-      "3            -8351127.0            -2626620.0  \n",
-      "4            -5595207.0             6211471.0  \n",
-      "..                  ...                   ...  \n",
-      "384             31241.0              124957.0  \n",
-      "385            124958.0              234325.0  \n",
-      "386            218709.0              484249.0  \n",
-      "387           -140645.0                   0.0  \n",
-      "388                 0.0                   0.0  \n",
+      "                  release_release_time  \n",
+      "word_number user                        \n",
+      "0           alex        -298591.600000  \n",
+      "1           alex         247710.142857  \n",
+      "2           alex         110089.666667  \n",
+      "3           alex         247611.312500  \n",
+      "4           alex         212857.000000  \n",
+      "...                                ...  \n",
+      "59          alex         153088.800000  \n",
+      "60          alex         156436.555556  \n",
+      "61          alex         199164.500000  \n",
+      "62          alex         122741.428571  \n",
+      "63          alex         168706.200000  \n",
       "\n",
-      "[389 rows x 7 columns]\n",
-      "                       index     hold_time  press_press_time  \\\n",
-      "word_number user                                               \n",
-      "0           alex  114.200000  5.705608e+06     725089.200000   \n",
-      "1           alex   76.000000  1.137929e+05     234301.000000   \n",
-      "2           alex  108.666667  1.458383e+05     125014.666667   \n",
-      "3           alex  165.750000  1.165817e+05     249577.625000   \n",
-      "4           alex  193.625000  1.369389e+05     207248.000000   \n",
-      "...                      ...           ...               ...   \n",
-      "59          alex  199.600000  1.062554e+05     131222.400000   \n",
-      "60          alex  233.888889  1.268989e+05     166848.444444   \n",
-      "61          alex  158.750000  1.249925e+05     191358.250000   \n",
-      "62          alex  161.714286  1.383560e+05     122739.857143   \n",
-      "63          alex  263.600000  1.499736e+05     168697.200000   \n",
-      "\n",
-      "                  press_release_time  release_release_time  \n",
-      "word_number user                                            \n",
-      "0           alex       -4.980518e+06        -298591.600000  \n",
-      "1           alex        1.205081e+05         247710.142857  \n",
-      "2           alex       -2.082367e+04         110089.666667  \n",
-      "3           alex        1.329959e+05         247611.312500  \n",
-      "4           alex        7.030912e+04         212857.000000  \n",
-      "...                              ...                   ...  \n",
-      "59          alex        2.496700e+04         153088.800000  \n",
-      "60          alex        3.994956e+04         156436.555556  \n",
-      "61          alex        6.636575e+04         199164.500000  \n",
-      "62          alex       -1.561614e+04         122741.428571  \n",
-      "63          alex        4.685260e+04         168706.200000  \n",
-      "\n",
-      "[64 rows x 5 columns]\n"
+      "[64 rows x 4 columns]\n"
      ]
     }
    ],
@@ -1320,7 +1283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
