--- a/main.ipynb
+++ b/main.ipynb
@@ -1151,7 +1151,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We applied our models to a practical test to determine their efficiency and accuracy in detecting a user based on their typing. We load a model, and a file taken from our keylogger, and test to see which user the model will predict."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## KNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The KNN model managed to predict Zineb's keystroke patterns with 85% of accuracy. On the below graph we see the percentages for all users. There is a significant margin of difference between the correct answer and the other users, which means that this model is accurate in correctly predicting a user."
    ]
   },
   {
@@ -1213,6 +1227,13 @@
    "metadata": {},
    "source": [
     "## Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Gradient Boosting, the accuracy is dramatically increaced, with Zineb's typing being predicted with 93.7% certainty. On the below graph we see and even larger contrast between the users, which makes this model even more capable of predicting the correct user's typing patterns."
    ]
   },
   {
