bug fix preprocess

--- a/main.ipynb
+++ b/main.ipynb
@@ -326,20 +326,22 @@
     "        sub_df = release_df[release_df[\"key\"] == row['key']]\n",
     "        lower_bound = None\n",
     "        for sub_id, sub_row in sub_df.reset_index().iterrows():\n",
-    "            higher_bound = sub_row[\"timestamp\"]\n",
-    "            if sub_id == 0:\n",
-    "                press_time = press_df[(press_df[\"key\"] == sub_row[\"key\"]) & (\n",
-    "                    press_df[\"timestamp\"] < higher_bound)].iloc[0][\"timestamp\"]\n",
-    "            else:\n",
-    "                press_time = press_df[(press_df[\"key\"] == sub_row[\"key\"]) & (\n",
-    "                    press_df[\"timestamp\"] < higher_bound) & (press_df[\"timestamp\"] > lower_bound)].iloc[0][\"timestamp\"]\n",
-    "            lower_bound = higher_bound\n",
-    "            dataset_rows.append({\n",
-    "                \"key\": sub_row[\"key\"],\n",
-    "                \"pressed\": press_time,\n",
-    "                \"released\": sub_row[\"timestamp\"],\n",
-    "                \"user\": user\n",
-    "            })\n",
+    "            try:\n",
+    "                higher_bound = sub_row[\"timestamp\"]\n",
+    "                if sub_id == 0:\n",
+    "                    press_time = press_df[(press_df[\"key\"] == sub_row[\"key\"]) & (\n",
+    "                        press_df[\"timestamp\"] < higher_bound)].iloc[0][\"timestamp\"]\n",
+    "                else:\n",
+    "                    press_time = press_df[(press_df[\"key\"] == sub_row[\"key\"]) & (press_df[\"timestamp\"] < higher_bound) & (press_df[\"timestamp\"] > lower_bound)].iloc[0][\"timestamp\"]\n",
+    "                lower_bound = higher_bound\n",
+    "                dataset_rows.append({\n",
+    "                    \"key\": sub_row[\"key\"],\n",
+    "                    \"pressed\": press_time,\n",
+    "                    \"released\": sub_row[\"timestamp\"],\n",
+    "                    \"user\": user\n",
+    "                })\n",
+    "            except:\n",
+    "                continue\n",
     "\n",
     "    dataset = pd.DataFrame(dataset_rows).sort_values(['pressed'])\n",
     "\n",
@@ -1681,7 +1683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
