Comments on notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intro + recherche"
+    "Keystroke dynamics may be applied as a method of biometric authentication of users. Keystroke dynamics evaluate the manner and rhythm of typing of individuals. Multiple methods of computing different metrics have been used to research authentication using keystroke dynamics, for example: checking inter-key latencies between different letters, or computing the time intervals between individual keystrokes and the total time of typing of a specific piece of text. The combination of multiple of these metrics can allow to extract statistical data and create a machine learning model that can allow to identify individuals based on their typing patterns. \n",
+    "\n",
+    "The way a user is identified is by comparing a set of data extracted during a log in session with sets of data stored by the system for each registered user. A similarity score is given for each comparison made, and if one of those falls into a pre-defined tolerance limit, the used is successfully authenticated. This method is known as classification.\n",
+    "\n",
+    "The efficiency of this system for identification is disputed when it comes to practical uses and implementation. Many factors can impact the speed and rhythm of typing on a user: the keyboard they are using, their alertness level, changes to their typing patterns due to injuries, or only using one hand to type. Furthermore, the speed of typing can vary between users, an expert or a beginner. According to a paper by Jarmo Illonen, a fast typer is easier to identify among other fast typers, as with a less experienced slower typer, who needs to search for keys, it is harder to have great predictability. This is why keystroke dynamics have been recommended more as verification methods, to supplement existing identification solutions, like detecting keystroke dynamics while typing a password.\n",
+    "\n",
+    "Sources:\n",
+    "- M. Karnan, M. Akila and N. Krishnaraj, “Biometric personal authentication using keystroke dynamics: A review,” (online) Applied Soft Computing, vol. 11, no. 2, March 2011, p. 1565-1573. Available on: https://www.sciencedirect.com/science/article/abs/pii/S156849461000205X\n",
+    "- J. Ilonen, \"Keystroke dynamics,\" (online) Advanced Topics in Information processing–lecture, 2003. Available on: http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.99.9014&rep=rep1&type=pdf\n",
+    "-  K. Shenoy, “Keystroke Dynamics Analysis and Prediction,” (online) on Medium, January 18th, 2021. Available on: https://towardsdatascience.com/keystroke-dynamics-analysis-and-prediction-part-1-eda-3fe2d25bac04 "
    ]
   },
   {
@@ -25,7 +34,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expliquer comment l'utiliser et ou le trouver etc"
+    "We use a keyloger for the first step of the project, the Data Acquisition. In order to extrapolate useful results and metrics that we can use in for further analysis, two keyloggers need to run simultaniously: one that logs every time a button is pressed, and another that logs every time a button is released. Our keylogger saves separate files for pressed and released buttons. We save a new file every 10 seconds with the keys pressed/released during that interval, over a timespan of 1 minute.\n",
+    "\n",
+    "The logging parameters can be easily modified. In the current configuration, each keylogger saves a file every 10 seconds, over a total of 60 seconds. In the end, 12 files will be saved in two folders: 6 for pressed keys, 6 for released keys.\n",
+    "\n",
+    "The keylogger works by triggering an event each time a button on the keyboard is pressed or released. The key is properly formatted with a timestamp of when it was pressed, and saved to a file. At the end of the SEND_REPORT_EVERY interval, the running text file is saved to the proper directory, and a new file is initialized. The keylogger exits at the end of the INTERRUPT_AFTER interval. When initializing the keylogger, the event type needs to be specified: \"press\" or \"release\".\n",
+    "\n",
+    "QuickStart: on Windows, to run the keylogger, use the command line: ./start.bat [your name]  \n",
+    "Please read the README file of this project for more information on how to launch and use the keylogger"
    ]
   },
   {
@@ -48,6 +64,23 @@
     "import math\n",
     "\n",
     "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Firstly, for each file in the key pressed and key released directories, we need to convert simple textual data into a useful data structure that is easy to manipulate. For our purposes, the ideal data structure is a DataFrame from Pandas.\n",
+    "\n",
+    "A DataFrame is two-dimensional, size-mutable, potentially heterogeneous tabular data. This data structure also contains labeled axes (rows and columns). Arithmetic operations align on both row and column labels. It represents the primary Pandas data structure.\n",
+    "\n",
+    "Once our pressed and released data is properly formatted, we can merge them into a single file, detailing for each key when it was pressed and released in a single dataset. In order to do that firstly we remove any duplicates that might have occurred when saving the separate text files. Then, for each timestamp of a released key, we search for the nearest timestamp for which the same key was pressed. We can then take that data and save it in a single dataset. We also identify in this dataset the name of the user who created this data, in order to properly differentiate between user datasets in our analysis.\n",
+    "\n",
+    "Finally we measure a few key metrics and add them to our final dataset, which is saved as a csv file for each user:\n",
+    "\n",
+    "- press_press_time: a list of time intervals between different subsequent key presses.\n",
+    "- press_release_time: a list of time intervals that represent the time interval for which a key is released and the next key is pressed.\n",
+    "- hold_time: a list of time intervals that represent the time for which a certain key is pressed"
    ]
   },
   {
@@ -165,6 +198,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also crop the datasets, so they're the same size for each user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 235,
    "metadata": {},
@@ -217,6 +257,19 @@
    "metadata": {},
    "source": [
     "### Computing the statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compute several main statistics to start with, connected to our main metrics in the dataset:\n",
+    "\n",
+    "- average_hold_time: average hold time\n",
+    "- average_press_press_time: average time between presses\n",
+    "- average_press_release_time: average time between press and release of different keys\n",
+    "- apm: number of key presses per minute\n",
+    "- error_rate: error rate percentage (number of times backspace is pressed over the whole text)"
    ]
   },
   {
@@ -296,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the statistics calculated in the previous step, we can now plot multiple graphs that will help us analyze the data we've collected, as well as the metrics measured, in order to extract the most possible information about which metric to use to help us identify a user using keystroke analysis. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 241,
    "metadata": {},
@@ -315,6 +375,13 @@
    "metadata": {},
    "source": [
     "#### General statistics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A table view for key statistical metrics for each user. We can see that for the data collected, the hold time and press-release time have varied values, which might implicate that those metrics can help us distinguish between users."
    ]
   },
   {
@@ -412,6 +479,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We created Box plots for each metric and each user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "metadata": {
@@ -459,6 +533,13 @@
    "metadata": {},
    "source": [
     "#### Bar charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting the distribution of different metrics over time for each user as Bar Charts. The hold-time duration shows similar distributions for Stefan and Zineb, which makes this metric less interesting to analyse if we want to distinguish the two. However, the press-press metric is interesting, since there are very different distributions among the different users."
    ]
   },
   {
@@ -516,6 +597,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A Heatmap showing the correlation between different metrics. We can conclude that there is a big contrast between the hold time and press-release time as well as the press-press time, which means that these metrics can be contrasting and deciding factors to study when identifying a user. Metrics with a higher degree of correlation give us less information because of the similarity, such as the correlation between press-release time and press-press time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 247,
    "metadata": {},
@@ -555,6 +643,13 @@
    "metadata": {},
    "source": [
     "#### Density charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this graphic, for each metric and each user we plot the value densities. This allows us to compare the typing styles between the different users efficiently, as we can see in the differences in densities for each user. This can allow us to study the possibility of identifying a user using keystroke dynamics. The hold time density is especially interesting, with peaks that are significant in density and different for each user, making identification and classification easier to separate users. The same applies to the press-release metric. However, the press-press density plot does show an almost identical curve between two users, which can be a problem if this metric is used to differentiate between the two."
    ]
   },
   {
@@ -635,6 +730,13 @@
    "metadata": {},
    "source": [
     "### Cluster visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is our first attempt to identify clusters manually using simple statistical evaluation. We do scatter plots of the values of two metrics for each user, doing so for each distinct pairs of metrics. The data for each user is shown in a different color. We can identify a lot of overlap in the three \"clusters\" which means most of the values produced by all three users are extremely similar. There are individuals in our dataset that have managed to produce more outliers than others (for example Alex, in blue). In addition to the unique outliers, we can also identify certain areas that are distinct for each user, especially in the first plot, with clear areas in yellow, red, and blue visible."
    ]
   },
   {
@@ -765,6 +867,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient boosting is a type of machine learning boosting. It's main principle is the notion that a weak learner had the capability to be modified and become better. These weak learners are usually decision trees. When training, trees are added one at a time, without modifying the existing trees. Every time, the loss function (when used for classification, it's a log loss function) allows us to evaluate and minimize the loss of the model, therefore improving its accuracy. The key idea is to set the target outcomes for this next model in order to minimize the error. Gradient boosting is used to minimize bias errors in the model. \n",
+    "\n",
+    "Gradient Boosting has produced a model that returns a correct result 86% of the time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 256,
    "metadata": {},
@@ -800,6 +911,15 @@
    "metadata": {},
    "source": [
     "#### Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random forests are learning methods that can be applied to regression or classification. It works by constructing a large amount of decision trees while training, each with a random subset of the training data. When used for the purposes of classification, the returned result is the class that is selected by the biggest amount of trees. The fact that the trees are random helps to avoid overfitting the model to the given training set. \n",
+    "\n",
+    "This method of machine learning managed to create a model with 86% accuracy."
    ]
   },
   {
@@ -839,6 +959,13 @@
    "metadata": {},
    "source": [
     "## Identifying users and intruders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We applied our models to a practical test to determine their efficiency and accuracy in detecting a user based on their typing. We load a model, and a file taken from our keylogger, and test to see which user the model will predict."
    ]
   },
   {
@@ -893,6 +1020,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Gradient Boosting, the model allows us to accurately identify a user, in this case Alex, with typing being predicted with 98% certainty. On the below graph we see a large contrast between the probabilities for the identified users, and the rest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 262,
    "metadata": {},
@@ -932,6 +1066,13 @@
    "metadata": {},
    "source": [
     "#### Identifying an intruder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we use an intruder, in this case Zihao (whose dataset was not included in the model training), we see a very low degree of accuracy for each of the users, which indicates that the model didn't succeed at identifying the user using their keystroke patterns. With a carefully chosen threshold, this model can efficiently avoid intruders by avoiding to identify them with any of the established clients."
    ]
   },
   {
@@ -1022,6 +1163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Random Forest model managed to successfully identify the correct user using their keystroke data, albeit with less accuracy (92%). Furthermore, the contract between the identified and non identified users is slightly smaller, making the process of finding a threshold harder and less precise in some cases."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 266,
    "metadata": {},
@@ -1061,6 +1209,13 @@
    "metadata": {},
    "source": [
     "#### Identifying an intruder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When an intruder is introduced, one of our users is identified with 63% accuracy, while the other users are around the 16-19% mark. While this information can still be interpreted correctly (no user has been identified), the margin between the highest prediction and the rest is higher, and 63% remains quite high. We can conclude that this model is less efficient than the Gradient Boosting model in identifying users, and refusing intruders."
    ]
   },
   {
@@ -1117,7 +1272,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We tested a difference-based approach using statistical analysis in order to try to quantify the differences between the typing styles of different users. That can allow to set specific treshold for identifying users based on different measured metrics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Calculating the distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This methods allows us to compute the distance between two users. We use in in order to calculate the distances in metrics between a user and an intruder (or any two chunks of typing data). We can use that information later in order to compute the necessary threshold to set, so that we can identify a user, but also prevent an intruder from being wrongly identified.\n",
+    "\n",
+    "In order to compute the distance, we extract the same amount of data from the user and the intruder, and we calculate the statisctics based on the intruders metrics (see above). We calculate the Minkowski distance between the stats of the user and intruder. The Minkowski distance is a metric that is a generalisation between Euclidian distance and Manhattan distance. It is a distance (or similarity) measure between two points in a normed space. Furthermore, we calculate the differences of the APM and Error Rates as additional metrics."
    ]
   },
   {
@@ -1175,6 +1346,13 @@
    "metadata": {},
    "source": [
     "##### Finding the distance threshold for knwon users"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We apply the above method fistly on the known users, in order to determine the variations of metrics that can happen for a single users. A user's metrics can vary significantly over time, and depending on different conditions (the type and difficuly of text typed, their energy and focus etc.). That is why, firsly, for each user we determine the average distance that is found. We do that by shuffling the dataset for the user (in order to avoid getting chuncks of only one typing style of the user). We keep a part of the data as the user data, and then the rest is divided in chunks that we test against. We compute the distance between the kept user data and each of the chuncks, repeating that multiple times. Finally we compute the average distances for the user. This finally gives us the thresholds needed to be set for each metric for each user to take into account the typing variations of each user."
    ]
   },
   {
@@ -1289,6 +1467,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the extracted data, and put it to the test against an intruder. For the intruder we calculate the distances with each user.  We can conclude by comparing the distances of the inturder and thresholds set previously, that the distances in most cases are over the thresholds, which means that the distance is sufficient to identify an intruder. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 272,
    "metadata": {},
@@ -1342,6 +1527,13 @@
    "metadata": {},
    "source": [
     "### Decision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We apply all of the analysis and approaches that we've examined to a practical example. We have developped a method that takes a dataset of typing data and tests it against a base of registered users for the purpose of identifying the user, either as one of the registered profiles, or as an intruder. We compute the probability of a match using gradient boosting and the random forest method, as well as the distances for all of the metrics, as outlined in our statistical approach. If the test data passes all of the evaluations, the user is successfuly identified."
    ]
   },
   {
