--- a/main.ipynb
+++ b/main.ipynb
@@ -58,7 +58,9 @@
     "    - built the classification models\n",
     "    - built the recognition algorithms\n",
     "    - did scientific research for the classifiers and the recognition algorithm\n",
-    "- **Zihao:**"
+    "- **Zihao:**\n",
+    "    - created the optional HTML typing interface\n",
+    "    - provided suggestions in data preprocessing steps"
    ]
   },
   {
